# phongthuybotbackend

./: .dockerignore  .env.example  .gitignore  .render-buildpacks.json  API_TROUBLESHOOTING.md  Dockerfile  Procfile  README.md  a2aprotocol.md  adk-a2a-integration.md  app.js  auth.js  cursor.md  docker-compose.yml  interface.md  multiAgentPrd.md  package-lock.json  package.json  prd.md  progress-log.md  render.yaml  requirements.txt  script_convert_js_to_py.py  server.js  start.sh  tasklog.md  test-api.js  test_api_endpoints.py
PRD/: adk.md  full_stack_integration.md  (+8 more)
python_adk/: .env.example  README.md  __init__.py  debug_tool.py  main.py  prompt.py  pyproject.toml  registry.py  requirements.txt  run_local.py  setup_adk.py  test_imports.py
python_adk/a2a/: __init__.py  protocol.py
python_adk/agents/: __init__.py  agent_types.py  base_agent.py
python_adk/agents/auth_agent/: __init__.py  agent.py
python_adk/agents/batcuclinh_so_agent/: agent.py
python_adk/agents/batcuclinh_so_agent/prompts/: system_prompt.txt
python_adk/agents/batcuclinh_so_agent/tools/: bank_account_analyzer.py  bank_account_suggester.py  cccd_analyzer.py  password_analyzer.py  phone_analyzer.py
python_adk/agents/payment_agent/: __init__.py  agent.py
python_adk/agents/payment_agent/prompts/: system_prompt.txt
python_adk/agents/payment_agent/tools/: payment_processor.py
python_adk/agents/root_agent/: __init__.py  agent.py
python_adk/agents/root_agent/tools/: agent_router.py  context_tracker.py  conversation_manager.py  intent_classifier.py
python_adk/agents/user_agent/: __init__.py  agent.py
python_adk/agents/user_agent/prompts/: system_prompt.txt
python_adk/config/: config.py
python_adk/constants/: bat_tinh.py  combinations.py  digit_meanings.py  response_factors.py
python_adk/mcp/: __init__.py  common.py  server.py
python_adk/session/: session_manager.py
(+57 files in other folders)
